--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="">
 <meta name="author" content="">
-
+<link href="https://fonts.googleapis.com/css?family=Cormorant+Infant" rel="stylesheet">
 <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,300' rel='stylesheet' type='text/css'>
 <link href="https://fonts.googleapis.com/css?family=Bad+Script" rel="stylesheet">
 <link href="css/prettyPhoto.css" rel="stylesheet" type="text/css" />
@@ -154,7 +154,7 @@
 			<div class="wrap" style="margin-bottom: 2.5%">
 				<div>
 					<div class="row">
-						<table style="font-family: 'Bad Script', cursive; font-size: 25px;  color: #000" bordercolor="#000" border-radius="5%" border="1" align="center" width="80%" cellpadding="10%" font-size="15px" margin-bottom="10%";>
+					<table style="font-family: 'Cormorant Infant', serif;  color: #000; font-size:20px" bordercolor="#000" border-radius="5%" border="1" align="center" width="80%" cellpadding="10%" font-size="25px" margin-bottom="10%";>
 							<tr>
 								<th>Услуга</th>
 								<th>Стоимость</th>
@@ -212,9 +212,9 @@
 					<div class="wrap latest_news_block" style="text-align: center"  >
 				
 
-				<a href="images/12.jpg"  style="font-family:  'Bad Script', cursive; text-align: center; font-size: 25px;  color: #000" download>Прайс-лист на услуги "Депиляция и шугаринг": СКАЧАТЬ</a><br><br>
-				<a href="images/312.jpg"  style="font-family:  'Bad Script', cursive; text-align: center; font-size: 25px;  color: #000" download>Прайс-лист на услуги "Маникюр и педикюр, Стрижки и укладки": СКАЧАТЬ</a><br><br>
-				<a href="images/111.jpg"  style="font-family:  'Bad Script', cursive; text-align: center; font-size: 25px;  color: #000" download>Прайс-лист на услуги "Оздоровительно-гигиенический массаж": СКАЧАТЬ</a>
+				<a href="images/12.jpg"  style="font-family: 'Cormorant Infant', serif; text-align: center; font-size: 25px;  color: #000" download>Прайс-лист на услуги "Депиляция и шугаринг": СКАЧАТЬ</a><br><br>
+				<a href="images/312.jpg"  style="font-family: 'Cormorant Infant', serif; text-align: center; font-size: 25px;  color: #000" download>Прайс-лист на услуги "Маникюр и педикюр, Стрижки и укладки": СКАЧАТЬ</a><br><br>
+				<a href="images/111.jpg"  style="font-family: 'Cormorant Infant', serif; text-align: center; font-size: 25px;  color: #000" download>Прайс-лист на услуги "Оздоровительно-гигиенический массаж": СКАЧАТЬ</a>
 					</div></div>
 				</div>
 			</div>
