--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 					<table>
 						<tr>
 							<td>
-					<div class="phone_block" ><img src="images/logo1.png" alt="" /></div></td>
+					<div class="phone_block" ><a href="index.html"><img src="images/logo1.png" alt="" /></a></div></td>
 					<td><div class="logo" ><a href="index.html"><img src="images/logo.png" alt="" /></a></div></td>
 					
 					<td></td><div class="email_block" ><a href="https://www.instagram.com/salon_krasoti66/"><img src="images/logo2.png" alt="" /></a></div></td>
