--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 					<div  style="padding-bottom:-10px; " ><img src="images/logo1.png" alt="" /></div></td>
 
 					<td><div  style="padding-top: 1%;  " ><a href="index.html" ><img src="images/logo.png" alt="" /></a></div></td>
-										<td><div  style="padding-bottom:-10px; "><a href="https://www.instagram.com/salon_krasoti66/"><img src="images/logo2.png" alt="" /></a></div></td>
+										<td><div  style="padding-bottom:-10px; "><a href="https://www.instagram.com/salon_krasoti_zali_/"><img src="images/logo2.png" alt="" /></a></div></td>
 </tr>
 					</table>
 										</div>
